--- a/homework_1/package.json
+++ b/homework_1/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^27.1.1"
+    "jest": "^27.1.1",
+    "bootstrap": "^5.3.1"
   }
 }
