--- a/todo_list_app/server/package.json
+++ b/todo_list_app/server/package.json
@@ -1,17 +1,17 @@
 {
   "name": "server",
-  "version": "1.0.0",
-  "description": "Backend for TODO list app",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "db.start": "json-server-auth db.json --port 4000"
+    "start": "node ./bin/www"
   },
   "dependencies": {
-        "json-server": "^0.17.4",
-        "json-server-auth": "^2.1.0",
-        "express": "^4.18.2"
-  },
-  "author": "Nermin Dedovic",
-  "license": "ISC"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "morgan": "~1.9.1",
+    "mongoose": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "bcrypt": "^5.1.1"
+  }
 }
