--- a/todo_list_app/server/package.json
+++ b/todo_list_app/server/package.json
@@ -12,6 +12,7 @@
     "morgan": "~1.9.1",
     "mongoose": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1"
   }
 }
